[package]
name = "kobink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
http-body = "1.0"
http-body-util = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tower = { version = "0.4", features = ["tokio", "tracing"] }
tower-http = { version = "0.5", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diesel = { version = "2.1", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }