[package]
name = "kobink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
http-body = "1.0"
http-body-util = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tower = { version = "0.4", features = ["tokio", "tracing"] }
tower-http = { version = "0.5", features = ["limit", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diesel = { version = "2.1", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
reqwest = "0.11.22"
chrono = { version = "0.4", features=["serde", "std"]}
anyhow = "1.0.75"
base64 = "0.21.5"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4", "macro-diagnostics", "fast-rng", "serde"] }
walkdir = "2.4.0"
epub = "2.1.1"
tokio-util = "0.7.10"
